flux/clusters/apps/base/kestra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kestra
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
